Fix stickers controls overflow

--- a/src/css/night-react/components/controls/stickers/_stickersCanvasControls.sass
+++ b/src/css/night-react/components/controls/stickers/_stickersCanvasControls.sass
@@ -13,6 +13,7 @@
     position: absolute
     top: 0
     left: 0
+    overflow: hidden
     width: 100%
     height: 100%
     cursor: default
